correct the alignments of header

--- a/src/componets/Header/Header.module.css
+++ b/src/componets/Header/Header.module.css
@@ -1,71 +1,77 @@
 @import url('https://fonts.googleapis.com/css2?family=Inika&family=Roboto+Slab:wght@400;700&display=swap');
 
 .header {
-    background-color: white;
-    /* border: 4px solid red; */
-    margin-top: 0.5rem;
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    font-family: 'Roboto Slab', serif;
-  }
-  
-  .nav {
-    display: flex;
-    justify-content: space-between;
-    width: 80%; 
-    /* max-width: 1250px;  */
-    padding-right: 5rem; 
-    /* border: 4px solid blue; */
-    height: 100%;
-    
-  }
-  
-  .navList {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    /* border: 4px solid yellow; */
-  }
-  
-  .navItem {
-    padding: 0.8rem; 
-  }
-  
-  .authButtons {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    /* border: 4px solid yellow; */
-  }
+  background-color: white;
+  height: 80px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  font-family: 'Roboto Slab', serif;
+}
 
-  .loginButton, .joinButton {
-    font-family: 'Inika', serif;
-  }
-  
-  .loginButton {
-    padding: 0.5rem; 
-    margin: 0.5rem;
-    border-radius: 1.5rem;
-    width: 95px;
-    height: 45px;
-    background-color: #8039DF;
-    color: white;
-  }
-  
-  .joinButton {
-    padding: 0.5rem; 
-    margin: 0.5rem; 
-    border: 1px solid #D1D5DB;
-    border-radius: 1.5rem ; 
-    width: 95px;
-    height: 45px;
-  }
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 120%;
+  padding-right: 5rem;
+  height: 100%;
+  margin-left: 120px;
+}
 
-  .iconContainer{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 112px;
-  }
-  
+.navList {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-left: 60px;
+  gap: 2px;
+  font-size: 14px;
+}
+
+.navItem {
+  padding: 0.8rem;
+}
+
+.authButtons {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+}
+
+.joiningBut {
+  display: flex;
+}
+
+.loginButton, .joinButton {
+  font-family: 'Inika', serif;
+  width: 220.6px;
+  height: 49.6px;
+  gap: 8px;
+}
+
+.loginButton {
+  padding: 0.5rem;
+  margin: 0.5rem;
+  border-radius: 1.5rem;
+  width: 95px;
+  height: 45px;
+  background-color: #8039DF;
+  color: white;
+}
+
+.joinButton {
+  padding: 0.5rem;
+  margin: 0.5rem;
+  border: 1px solid #D1D5DB;
+  border-radius: 1.5rem;
+  width: 95px;
+  height: 45px;
+}
+
+.iconContainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 112px;
+  margin-right: 60px;
+}
