--- a/src/componets/ProgressBar/ProgressBar.module.css
+++ b/src/componets/ProgressBar/ProgressBar.module.css
@@ -7,6 +7,7 @@
   align-items: center;
   justify-content: space-evenly;
   width: 80%;
+  height: 64.1px;
   margin-left: auto;
   margin-right: auto;
   font-family: 'Titillium Web', sans-serif;
